// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmailInput matches snapshot with error 1`] = `
<div
  className="form-group"
>
  <label
    className="form-label"
  >
    Email address
  </label>
  <input
    className="form-control form-control is-invalid"
    name="username"
    onChange={[Function]}
    placeholder="Enter email"
    type="email"
    value="anton@yahoo.com"
  />
  <div
    className="invalid-feedback"
  >
    Some error
  </div>
  <div
    className="valid-feedback"
  >
    Look's good
  </div>
</div>
`;

exports[`EmailInput matches snapshot without error 1`] = `
<div
  className="form-group"
>
  <label
    className="form-label"
  >
    Email address
  </label>
  <input
    className="form-control form-control is-valid"
    name="username"
    onChange={[Function]}
    placeholder="Enter email"
    type="email"
    value="anton@yahoo.com"
  />
  <div
    className="invalid-feedback"
  />
  <div
    className="valid-feedback"
  >
    Look's good
  </div>
</div>
`;
